# Dependencies

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE
antlr/: CMakeLists.txt
antlr/CPP14Parser/: CMakeLists.txt  CPP14Lexer.cpp  CPP14Lexer.h  CPP14Parser.cpp  CPP14Parser.h  CPP14ParserBaseListener.cpp  CPP14ParserBaseListener.h  CPP14ParserBaseVisitor.cpp  CPP14ParserBaseVisitor.h  CPP14ParserListener.cpp  CPP14ParserListener.h  CPP14ParserVisitor.cpp  CPP14ParserVisitor.h
antlr/Runtime/: CMakeLists.txt
assimp/lib/: assimp-vc142-mt.exp  assimp-vc142-mt.lib  assimp-vc142-mtd.exp  assimp-vc142-mtd.lib  assimp-vc143-mt.lib  assimp-vc143-mtd.lib  zlibstatic.lib  zlibstaticd.lib
assimp/lib/cmake/assimp/: assimpTargets.cmake
assimp/lib/cmake/assimp-5.0/: assimpTargets.cmake
assimp/lib/pkgconfig/: assimp.pc
glad/include/glad/: glad.h
glad/src/: glad.c
glslang/lib/: GenericCodeGen.lib  GenericCodeGend.lib  HLSL.lib  HLSLd.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib  SPVRemapper.lib  glslang-default-resource-limits.lib  glslang-default-resource-limitsd.lib  glslang.lib  glslangd.lib
glslang/lib/cmake/: SPVRemapperTargets.cmake  glslang-default-resource-limitsTargets-release.cmake  glslangConfig.cmake  spirv-remapTargets.cmake
meshoptimizer/lib/: meshoptimizer.lib
sdl2/cmake/: SDL2Targets.cmake
sdl2/lib/: SDL2.lib  SDL2d.lib  SDL2main.lib  SDL2maind.lib
spdlog/lib/: spdlog.lib
spdlog/lib/pkgconfig/: spdlog.pc
spirv_cross/lib/: spirv-cross-c.lib  spirv-cross-core.lib  spirv-cross-cpp.lib  spirv-cross-cppd.lib  spirv-cross-hlsl.lib  spirv-cross-reflect.lib  spirv-cross-reflectd.lib  spirv-cross-util.lib  spirv-cross-utild.lib
spirv_cross/share/: spirv_crossConfig.cmake
tbb/lib/: tbb_debug.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib
tbb/lib/cmake/TBB/: TBBTargets.cmake
tbb/lib/pkgconfig/: tbb.pc
volk/lib/: volk.lib
volk/lib/cmake/volk/: volkConfigVersion.cmake  volkTargets-debug.cmake  volkTargets-release.cmake  volkTargets.cmake
